# owl-rs-project

./: .gitignore  Cargo.toml
owl/: Cargo.toml  clippy.toml
owl/.cargo/: config.toml
owl/src/: buffers.rs  errors.rs  lib.rs  mesh.rs  oxidised_bindings.rs  prelude.rs  safe_bindings.rs  screen.rs  shaders.rs  traits.rs  vertex_arrays.rs
owl/src/buffers/: traits.rs
owl/trait-derives/: Cargo.toml
owl/trait-derives/src/: lib.rs
src/: main.rs
winit/: Cargo.toml
winit/.cargo/: config.toml
winit/src/: main.rs
