[package]
name = "opengl-winit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe = "deny"
[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "deny"
allow-one-hash-in-raw-strings = "allow"

[dependencies]
raw-gl-context = { git = "https://github.com/glowcoil/raw-gl-context.git" }
owl = { path = "owl" }
winit = { version = "0.29.3", features = ["rwh_04"] }
