[package]
name = "owl"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "deny"
undocumented_unsafe_blocks = "deny"
option_if_let_else = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }

[dependencies]
bitflags = "2.4.1"
gl = "0.14.0"
raw-gl-context = { git = "https://github.com/glowcoil/raw-gl-context.git" }
raw-window-handle = "0.6.0"
trait-derives = { path = "trait-derives" }
