[package]
name = "winit-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "deny"
undocumented_unsafe_blocks = "deny"

[dependencies]
raw-gl-context = { git = "https://github.com/glowcoil/raw-gl-context.git" }
owl = { path = "../owl" }
winit = { version = "0.29.3", features = ["rwh_04"] }
env_logger = "0.11.1"
log = "0.4.20"
